Fix problem with alignment in button groups

--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -125,7 +125,7 @@
   > span{
     width: 30px;
     height: 30px;
-    line-height: 32px;
+    line-height: 30px;
     text-align: center;
     overflow: hidden;
     position: absolute;
